# xdg-desktop-portal-gxde

./: CMakeLists.txt  README.md  README.zh_CN.md
archlinux/: PKGBUILD
debian/: changelog  control  copyright
misc/: gxde.portal  org.freedesktop.impl.portal.desktop.gxde.service.in  xdg-desktop-portal-gxde.service.in
src/: CMakeLists.txt  filechooser.cpp  xdg-desktop-portal-gxde.cpp
